...
                                            <subviews>
                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="yml-gf-Qux">
                                                    <rect key="frame" x="10" y="10" width="355" height="23.5"/>
                                                    <subviews>
                                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="first name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AMa-H7-bFV">
                                                            <rect key="frame" x="0.0" y="0.0" width="355" height="23.5"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="firstName"/>
                                                            <nil key="textColor"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                            <textInputTraits key="textInputTraits"/>
                                                        </textField>
                                                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="first name error" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tUd-3E-1AY">
                                                            <rect key="frame" x="0.0" y="-10" width="355" height="0.0"/>
...
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tcL-n8-FUB" id="PaB-2X-CTr">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="last name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EWQ-Pz-Ijm">
                                                    <rect key="frame" x="10" y="10" width="355" height="23.5"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="lastName"/>
                                                    <nil key="textColor"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <textInputTraits key="textInputTraits"/>
                                                </textField>
                                            </subviews>
                                            <constraints>
...
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cih-vp-fHj" id="UIY-qJ-7Dt">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="telephone number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZlA-DO-uMe">
                                                    <rect key="frame" x="10" y="10" width="355" height="23.5"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="telephoneNumber"/>
                                                    <nil key="textColor"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <textInputTraits key="textInputTraits"/>
                                                </textField>
                                            </subviews>
                                            <constraints>
...
                    <navigationItem key="navigationItem" title="Add New Entry" id="0GF-Gg-yIx">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="ryI-MJ-0WS">
                            <connections>
                                <action selector="onTouchCancel:" destination="WEu-eZ-x26" id="ajm-Pw-UPP"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Done" id="0vq-So-Jvg">
                            <connections>
                                <action selector="onTouchDone:" destination="WEu-eZ-x26" id="YDv-E7-qf6"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
